Fix alignment of quality indicator

--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -299,7 +299,7 @@ ul.games a {
   border-radius: 1em;
   background: #aaa;
   text-align: center;
-  margin-left: 190px;
+  margin-left: 150px;
   margin-top: -25px;
 }
 
